I added text to the file

--- a/index.html
+++ b/index.html
@@ -435,61 +435,112 @@
             <div id="sliderWrapper" class="flex transition-transform duration-500">
                 <!-- Slide 1 -->
                 <div class="w-full sm:w-1/2 lg:w-1/4 flex-shrink-0 p-2">
-                    <img src="/Docs/Assets/Images/Home/slider1.jpg" class="w-full rounded-t-md" alt="">
+                    <img src="/Docs/Assets/Images/Home/slider3.jpg" class="w-full rounded-t-md" alt="">
                     <div class="p-3 flex flex-col justify-between border border-t-0">
-                        <a href="" class="hover:underline text-[#4f4856] leading-tight italic text-2xl">Stuckarbeiten
-                            Berlin Wilhelmstadt</a>
+                        <a href="" class="hover:underline text-[#4f4856] leading-tight italic text-xl">Fassadensanierung
+                            Berlin-Grunewald</a>
                         <a href="" class="hover:underline text-[#f8931f] mt-4 block">Zu den Referenzen</a>
                     </div>
                 </div>
                 <!-- Slide 2 -->
                 <div class="w-full sm:w-1/2 lg:w-1/4 flex-shrink-0 p-2">
-                    <img src="/Docs/Assets/Images/Home/slider1.jpg" class="w-full rounded-t-md" alt="">
+                    <img src="/Docs/Assets/Images/Home/slider4.jpg" class="w-full rounded-t-md" alt="">
                     <div class="p-3 flex flex-col justify-between border border-t-0">
-                        <a href="" class="hover:underline text-[#4f4856] leading-tight italic text-2xl">Stuckarbeiten
-                            Berlin Wilhelmstadt</a>
+                        <a href="" class="hover:underline text-[#4f4856] leading-tight italic text-xl">Fassadensanierung
+                            Balkoninstandsetzung Berlin</a>
                         <a href="" class="hover:underline text-[#f8931f] mt-4 block">Zu den Referenzen</a>
                     </div>
                 </div>
                 <!-- Slide 3 -->
                 <div class="w-full sm:w-1/2 lg:w-1/4 flex-shrink-0 p-2">
-                    <img src="/Docs/Assets/Images/Home/slider1.jpg" class="w-full rounded-t-md" alt="">
+                    <img src="/Docs/Assets/Images/Home/slider5.jpg" class="w-full rounded-t-md" alt="">
                     <div class="p-3 flex flex-col justify-between border border-t-0">
-                        <a href="" class="hover:underline text-[#4f4856] leading-tight italic text-2xl">Stuckarbeiten
-                            Berlin Wilhelmstadt</a>
+                        <a href="" class="hover:underline text-[#4f4856] leading-tight italic text-xl">Betonsanierung
+                            Berlin-
+                            Charlottenburg</a>
                         <a href="" class="hover:underline text-[#f8931f] mt-4 block">Zu den Referenzen</a>
                     </div>
                 </div>
                 <!-- Slide 4 -->
                 <div class="w-full sm:w-1/2 lg:w-1/4 flex-shrink-0 p-2">
-                    <img src="/Docs/Assets/Images/Home/slider1.jpg" class="w-full rounded-t-md" alt="">
+                    <img src="/Docs/Assets/Images/Home/slider6.jpg" class="w-full rounded-t-md" alt="">
                     <div class="p-3 flex flex-col justify-between border border-t-0">
-                        <a href="" class="hover:underline text-[#4f4856] leading-tight italic text-2xl">Stuckarbeiten
-                            Berlin Wilhelmstadt</a>
+                        <a href="" class="hover:underline text-[#4f4856] leading-tight italic text-xl">Fassadensanierung
+                            Putzsanierung Berlin-
+                            Mariendorf</a>
+                        <a href="" class="hover:underline text-[#f8931f] mt-4 block">Zu den Referenzen</a>
+                    </div>
+                </div>
+                <div class="w-full sm:w-1/2 lg:w-1/4 flex-shrink-0 p-2">
+                    <img src="/Docs/Assets/Images/Home/slider7.jpg" class="w-full rounded-t-md" alt="">
+                    <div class="p-3 flex flex-col justify-between border border-t-0">
+                        <a href="" class="hover:underline text-[#4f4856] leading-tight italic text-xl">Fassadensanierung
+                            Berlin-Kreuzberg</a>
                         <a href="" class="hover:underline text-[#f8931f] mt-4 block">Zu den Referenzen</a>
                     </div>
                 </div>
                 <div class="w-full sm:w-1/2 lg:w-1/4 flex-shrink-0 p-2">
                     <img src="/Docs/Assets/Images/Home/slider1.jpg" class="w-full rounded-t-md" alt="">
                     <div class="p-3 flex flex-col justify-between border border-t-0">
-                        <a href="" class="hover:underline text-[#4f4856] leading-tight italic text-2xl">Stuckarbeiten
-                            Berlin Wilhelmstadt</a>
+                        <a href="" class="hover:underline text-[#4f4856] leading-tight italic text-xl">Denkmalpflege
+                            Prenzlauer
+                            Berg</a>
                         <a href="" class="hover:underline text-[#f8931f] mt-4 block">Zu den Referenzen</a>
                     </div>
                 </div>
                 <div class="w-full sm:w-1/2 lg:w-1/4 flex-shrink-0 p-2">
-                    <img src="/Docs/Assets/Images/Home/slider1.jpg" class="w-full rounded-t-md" alt="">
+                    <img src="/Docs/Assets/Images/Home/slider2.jpg" class="w-full rounded-t-md" alt="">
                     <div class="p-3 flex flex-col justify-between border border-t-0">
-                        <a href="" class="hover:underline text-[#4f4856] leading-tight italic text-2xl">Stuckarbeiten
-                            Berlin Wilhelmstadt</a>
+                        <a href="" class="hover:underline text-[#4f4856] leading-tight italic text-xl">Stuckarbeiten
+                            Berlin
+                            Wilhelmstadt</a>
                         <a href="" class="hover:underline text-[#f8931f] mt-4 block">Zu den Referenzen</a>
                     </div>
                 </div>
                 <div class="w-full sm:w-1/2 lg:w-1/4 flex-shrink-0 p-2">
-                    <img src="/Docs/Assets/Images/Home/slider1.jpg" class="w-full rounded-t-md" alt="">
+                    <img src="/Docs/Assets/Images/Home/slider8.jpg" class="w-full rounded-t-md" alt="">
                     <div class="p-3 flex flex-col justify-between border border-t-0">
-                        <a href="" class="hover:underline text-[#4f4856] leading-tight italic text-2xl">Stuckarbeiten
-                            Berlin Wilhelmstadt</a>
+                        <a href="" class="hover:underline text-[#4f4856] leading-tight italic text-xl">Fassadensanierung
+                            Berlin
+                            Rosenthal</a>
+                        <a href="" class="hover:underline text-[#f8931f] mt-4 block">Zu den Referenzen</a>
+                    </div>
+                </div>
+                <div class="w-full sm:w-1/2 lg:w-1/4 flex-shrink-0 p-2">
+                    <img src="/Docs/Assets/Images/Home/slider9.jpg" class="w-full rounded-t-md" alt="">
+                    <div class="p-3 flex flex-col justify-between border border-t-0">
+                        <a href="" class="hover:underline text-[#4f4856] leading-tight italic text-xl">Fassadensanierung
+                            Kastanienallee Berlin
+                            Rosenthal</a>
+                        <a href="" class="hover:underline text-[#f8931f] mt-4 block">Zu den Referenzen</a>
+                    </div>
+                </div>
+                <div class="w-full sm:w-1/2 lg:w-1/4 flex-shrink-0 p-2">
+                    <img src="/Docs/Assets/Images/Home/slider10.jpg" class="w-full rounded-t-md" alt="">
+                    <div class="p-3 flex flex-col justify-between border border-t-0">
+                        <a href="" class="hover:underline text-[#4f4856] leading-tight italic text-xl">Fassadensanierung
+                            Berlin
+                            Pankow
+                        </a>
+                        <a href="" class="hover:underline text-[#f8931f] mt-4 block">Zu den Referenzen</a>
+                    </div>
+                </div>
+                <div class="w-full sm:w-1/2 lg:w-1/4 flex-shrink-0 p-2">
+                    <img src="/Docs/Assets/Images/Home/slider11.jpg" class="w-full rounded-t-md" alt="">
+                    <div class="p-3 flex flex-col justify-between border border-t-0">
+                        <a href="" class="hover:underline text-[#4f4856] leading-tight italic text-xl">Fassadensanierung
+                            Berlin
+                            Neukölln</a>
+                        <a href="" class="hover:underline text-[#f8931f] mt-4 block">Zu den Referenzen</a>
+                    </div>
+                </div>
+                <div class="w-full sm:w-1/2 lg:w-1/4 flex-shrink-0 p-2">
+                    <img src="/Docs/Assets/Images/Home/slider12.jpg" class="w-full rounded-t-md" alt="">
+                    <div class="p-3 flex flex-col justify-between border border-t-0">
+                        <a href="" class="hover:underline text-[#4f4856] leading-tight italic text-xl">Fassadensanierung
+                            Berlin
+                            Zehlendorf
+                        </a>
                         <a href="" class="hover:underline text-[#f8931f] mt-4 block">Zu den Referenzen</a>
                     </div>
                 </div>
@@ -625,13 +676,13 @@
     // Reset autoplay on user interaction
     function resetAutoPlay() {
         clearInterval(autoPlayInterval);
-        autoPlay();
+        // autoPlay();
     }
 
     // Initialize the slider on page load
     window.onload = () => {
         calculateVisibleSlides();
-        autoPlay();
+        // autoPlay();
     };
 
     // Recalculate visible slides and reset the slider position on window resize
