--- a/referenzen.html
+++ b/referenzen.html
@@ -145,217 +145,241 @@
             imageSrc: "/Docs/Assets/Images/referenzen/img1.jpg",
             title: "Fassadensanierung Berlin-Grunewald",
             location: "Wallotstr. 16-22a, Berlin-Grunewald",
-            link: "#"
+            link: "./.html"
         },
         {
-            imageSrc: "/Docs/Assets/Images/referenzen/img1.jpg",
-            title: "Fassadensanierung Berlin-Grunewald",
-            location: "Wallotstr. 16-22a, Berlin-Grunewald",
-            link: "#"
+            imageSrc: "/Docs/Assets/Images/referenzen/img2.jpg",
+            title: "Fassadensanierung Balkoninstandsetzung Berlin",
+            location: "Strassenfassade Eckhaus Rodenbergstr. 25-27/Greifenhagener Str. 42, 10437 Berlin",
+            link: "./.html"
         },
         {
-            imageSrc: "/Docs/Assets/Images/referenzen/img1.jpg",
-            title: "Fassadensanierung Berlin-Grunewald",
-            location: "Wallotstr. 16-22a, Berlin-Grunewald",
-            link: "#"
+            imageSrc: "/Docs/Assets/Images/referenzen/img3.jpg",
+            title: "Betonsanierung Berlin-Charlottenburg",
+            location: "Wundtstr. 56 / Riehlstr. 11-11a, berlin-Charlottenburg",
+            link: "./.html"
         },
         {
-            imageSrc: "/Docs/Assets/Images/referenzen/img1.jpg",
-            title: "Fassadensanierung Berlin-Grunewald",
-            location: "Wallotstr. 16-22a, Berlin-Grunewald",
-            link: "#"
+            imageSrc: "/Docs/Assets/Images/referenzen/img4.jpg",
+            title: "Fassadensanierung Putzsanierung Berlin-Mariendorf",
+            location: "Liviusstr. 17-22, Berlin-Mariendorf",
+            link: "./.html"
         },
         {
-            imageSrc: "/Docs/Assets/Images/referenzen/img1.jpg",
-            title: "Fassadensanierung Berlin-Grunewald",
-            location: "Wallotstr. 16-22a, Berlin-Grunewald",
-            link: "#"
+            imageSrc: "/Docs/Assets/Images/referenzen/img5.jpg",
+            title: "Fassadensanierung Berlin-Kreuzberg",
+            location: "Segitzdamm 44-52, 10969 Berlin-Kreuzberg",
+            link: "./.html"
         },
         {
-            imageSrc: "/Docs/Assets/Images/referenzen/img1.jpg",
-            title: "Fassadensanierung Berlin-Grunewald",
-            location: "Wallotstr. 16-22a, Berlin-Grunewald",
-            link: "#"
+            imageSrc: "/Docs/Assets/Images/referenzen/img6.jpg",
+            title: "Denkmalpflege Prenzlauer Berg",
+            location: "Greifswalder Straße 9, 10405 Berlin",
+            link: "./.html"
         },
         {
-            imageSrc: "/Docs/Assets/Images/referenzen/img1.jpg",
-            title: "Fassadensanierung Berlin-Grunewald",
-            location: "Wallotstr. 16-22a, Berlin-Grunewald",
-            link: "#"
+            imageSrc: "/Docs/Assets/Images/referenzen/img7.jpg",
+            title: "Stuckarbeiten Berlin Wilhelmstadt",
+            location: "",
+            link: "./.html"
         },
         {
-            imageSrc: "/Docs/Assets/Images/referenzen/img1.jpg",
-            title: "Fassadensanierung Berlin-Grunewald",
-            location: "Wallotstr. 16-22a, Berlin-Grunewald",
-            link: "#"
+            imageSrc: "/Docs/Assets/Images/referenzen/img8.jpg",
+            title: "Fassadensanierung Berlin Rosenthal",
+            location: "",
+            link: "./.html"
         },
         {
-            imageSrc: "/Docs/Assets/Images/referenzen/img1.jpg",
-            title: "Fassadensanierung Berlin-Grunewald",
-            location: "Wallotstr. 16-22a, Berlin-Grunewald",
-            link: "#"
+            imageSrc: "/Docs/Assets/Images/referenzen/img9.jpg",
+            title: "Fassadensanierung Kastanienallee Berlin Rosenthal",
+            location: "Fassadensanierung, Wärmedämmverbundsystem",
+            link: "./.html"
         },
         {
-            imageSrc: "/Docs/Assets/Images/referenzen/img1.jpg",
-            title: "Fassadensanierung Berlin-Grunewald",
-            location: "Wallotstr. 16-22a, Berlin-Grunewald",
-            link: "#"
+            imageSrc: "/Docs/Assets/Images/referenzen/img10.jpg",
+            title: "Fassadensanierung Berlin Pankow",
+            location: "",
+            link: "./.html"
         },
         {
-            imageSrc: "/Docs/Assets/Images/referenzen/img1.jpg",
-            title: "Fassadensanierung Berlin-Grunewald",
-            location: "Wallotstr. 16-22a, Berlin-Grunewald",
-            link: "#"
+            imageSrc: "/Docs/Assets/Images/referenzen/img11.jpg",
+            title: "Fassadensanierung Berlin Neukölln",
+            location: "Soldinerstr. 12, 12305 Berlin Neukölln",
+            link: "./.html"
         },
         {
-            imageSrc: "/Docs/Assets/Images/referenzen/img1.jpg",
-            title: "Fassadensanierung Berlin-Grunewald",
-            location: "Wallotstr. 16-22a, Berlin-Grunewald",
-            link: "#"
+            imageSrc: "/Docs/Assets/Images/referenzen/img12.jpg",
+            title: "Fassadensanierung Berlin Zehlendorf",
+            location: "Irmgardstraße 53, 14169 Berlin Zehlendorf",
+            link: "./.html"
         },
         {
-            imageSrc: "/Docs/Assets/Images/referenzen/img1.jpg",
-            title: "Fassadensanierung Berlin-Grunewald",
-            location: "Wallotstr. 16-22a, Berlin-Grunewald",
-            link: "#"
+            imageSrc: "/Docs/Assets/Images/referenzen/img13.jpg",
+            title: "Fassadensanierung Berlin Wedding",
+            location: "Seestr. 39/Gentherstr. 61, 13353 Berlin Wedding",
+            link: "./.html"
         },
         {
-            imageSrc: "/Docs/Assets/Images/referenzen/img1.jpg",
-            title: "Fassadensanierung Berlin-Grunewald",
-            location: "Wallotstr. 16-22a, Berlin-Grunewald",
-            link: "#"
+            imageSrc: "/Docs/Assets/Images/referenzen/img14.jpg",
+            title: "Denkmalpflege Berlin Moabit",
+            location: "Stephanstraße 18, 10559 Berlin Moabit",
+            link: "./.html"
         },
         {
-            imageSrc: "/Docs/Assets/Images/referenzen/img1.jpg",
-            title: "Fassadensanierung Berlin-Grunewald",
-            location: "Wallotstr. 16-22a, Berlin-Grunewald",
-            link: "#"
+            imageSrc: "/Docs/Assets/Images/referenzen/img15.jpg",
+            title: "Fassadensanierung Berlin Neukölln",
+            location: "Objekt Kiehlufer 67-73/Hüttenroderweg, 12059 Berlin Neukölln",
+            link: "./.html"
         },
         {
-            imageSrc: "/Docs/Assets/Images/referenzen/img1.jpg",
-            title: "Fassadensanierung Berlin-Grunewald",
-            location: "Wallotstr. 16-22a, Berlin-Grunewald",
-            link: "#"
+            imageSrc: "/Docs/Assets/Images/referenzen/img16.jpg",
+            title: "Fassadensanierung Berlin Schönberg",
+            location: "Freisinger str. 8/8a, 10781 Berlin Schönberg",
+            link: "./.html"
         },
         {
-            imageSrc: "/Docs/Assets/Images/referenzen/img1.jpg",
-            title: "Fassadensanierung Berlin-Grunewald",
-            location: "Wallotstr. 16-22a, Berlin-Grunewald",
-            link: "#"
+            imageSrc: "/Docs/Assets/Images/referenzen/img17.jpg",
+            title: "Fassadensanierung Berlin Charlottenburg",
+            location: "Pestalozzistr. 75, 10627 Berlin Charlottenburg",
+            link: "./.html"
         },
         {
-            imageSrc: "/Docs/Assets/Images/referenzen/img1.jpg",
-            title: "Fassadensanierung Berlin-Grunewald",
-            location: "Wallotstr. 16-22a, Berlin-Grunewald",
-            link: "#"
+            imageSrc: "/Docs/Assets/Images/referenzen/img18.jpg",
+            title: "Fassadensanierung Berlin Westend",
+            location: "Kirschenallee 12a, 14050 Berlin Westend",
+            link: "./.html"
         },
         {
-            imageSrc: "/Docs/Assets/Images/referenzen/img1.jpg",
-            title: "Fassadensanierung Berlin-Grunewald",
-            location: "Wallotstr. 16-22a, Berlin-Grunewald",
-            link: "#"
+            imageSrc: "/Docs/Assets/Images/referenzen/img19.jpg",
+            title: "Fassadensanierung Berlin Mitte",
+            location: "Spandauer Damm 145-151 / Hamburger Str. 37-41, 12623 Berlin Mitte",
+            link: "./.html"
         },
         {
-            imageSrc: "/Docs/Assets/Images/referenzen/img1.jpg",
-            title: "Fassadensanierung Berlin-Grunewald",
-            location: "Wallotstr. 16-22a, Berlin-Grunewald",
-            link: "#"
+            imageSrc: "/Docs/Assets/Images/referenzen/img20.jpg",
+            title: "Malerarbeiten Neukölln Berlin",
+            location: "Kölner Damm 40-62, Wermuthweg 11-19, Neukölln Berlin",
+            link: "./.html"
         },
         {
-            imageSrc: "/Docs/Assets/Images/referenzen/img1.jpg",
-            title: "Fassadensanierung Berlin-Grunewald",
-            location: "Wallotstr. 16-22a, Berlin-Grunewald",
-            link: "#"
+            imageSrc: "/Docs/Assets/Images/referenzen/img21.jpg",
+            title: "Fassadensanierung Wilmersdorf Berlin",
+            location: "Fasanenstraße 61 / Meierottostraße 1, 10719 Wilmersdorf Berlin",
+            link: "./.html"
         },
         {
-            imageSrc: "/Docs/Assets/Images/referenzen/img1.jpg",
-            title: "Fassadensanierung Berlin-Grunewald",
-            location: "Wallotstr. 16-22a, Berlin-Grunewald",
-            link: "#"
+            imageSrc: "/Docs/Assets/Images/referenzen/img22.jpg",
+            title: "Fassadensanierung Berlin Neukölln",
+            location: "Sonnenallee 220/Saalestr. 40-41, 12055 Berlin Neukölln",
+            link: "./.html"
         },
         {
-            imageSrc: "/Docs/Assets/Images/referenzen/img1.jpg",
-            title: "Fassadensanierung Berlin-Grunewald",
-            location: "Wallotstr. 16-22a, Berlin-Grunewald",
-            link: "#"
+            imageSrc: "/Docs/Assets/Images/referenzen/img23.jpg",
+            title: "Denkmalpflege Berlin Friedenau",
+            location: "Handjerrystr. 90/Schnackenburgstr. 10-12, 12159 Berlin Friedenau",
+            link: "./.html"
         },
         {
-            imageSrc: "/Docs/Assets/Images/referenzen/img1.jpg",
-            title: "Fassadensanierung Berlin-Grunewald",
-            location: "Wallotstr. 16-22a, Berlin-Grunewald",
-            link: "#"
+            imageSrc: "/Docs/Assets/Images/referenzen/img24.jpg",
+            title: "Fassadensanierung Berlin Charlottenburg",
+            location: "Kaiserdamm, Berlin Charlottenburg",
+            link: "./.html"
         },
         {
-            imageSrc: "/Docs/Assets/Images/referenzen/img1.jpg",
-            title: "Fassadensanierung Berlin-Grunewald",
-            location: "Wallotstr. 16-22a, Berlin-Grunewald",
-            link: "#"
+            imageSrc: "/Docs/Assets/Images/referenzen/img25.jpg",
+            title: "Fassadensanierung Berlin Steglitz.",
+            location: "Schützenstr. 21-21a/Rugestr., 12165 Berlin Steglitz.",
+            link: "./.html"
         },
         {
-            imageSrc: "/Docs/Assets/Images/referenzen/img1.jpg",
-            title: "Fassadensanierung Berlin-Grunewald",
-            location: "Wallotstr. 16-22a, Berlin-Grunewald",
-            link: "#"
+            imageSrc: "/Docs/Assets/Images/referenzen/img26.jpg",
+            title: "Stuckarbeiten Berlin Schöneberg",
+            location: "Luitpoldstr. 26, 10777 Berlin Schöneberg",
+            link: "./.html"
         },
         {
-            imageSrc: "/Docs/Assets/Images/referenzen/img1.jpg",
-            title: "Fassadensanierung Berlin-Grunewald",
-            location: "Wallotstr. 16-22a, Berlin-Grunewald",
-            link: "#"
+            imageSrc: "/Docs/Assets/Images/referenzen/img27.jpg",
+            title: "Fassadensanierung Berlin Steglitz",
+            location: "Holsteinische Str. 12/12a, 12163 Berlin Steglitz",
+            link: "./.html"
         },
         {
-            imageSrc: "/Docs/Assets/Images/referenzen/img1.jpg",
-            title: "Fassadensanierung Berlin-Grunewald",
-            location: "Wallotstr. 16-22a, Berlin-Grunewald",
-            link: "#"
+            imageSrc: "/Docs/Assets/Images/referenzen/img28.jpg",
+            title: "Denkmalpflege Berlin Charlottenburg",
+            location: "Knesebeckstraße 33-34, 10623 Berlin Charlottenburg",
+            link: "./.html"
         },
         {
-            imageSrc: "/Docs/Assets/Images/referenzen/img1.jpg",
-            title: "Fassadensanierung Berlin-Grunewald",
-            location: "Wallotstr. 16-22a, Berlin-Grunewald",
-            link: "#"
+            imageSrc: "/Docs/Assets/Images/referenzen/img29.jpg",
+            title: "Fassadensanierung Berlin Schöneberg",
+            location: "Bozener Str. 13-14/Meraner Str. 16, 10825 Berlin Schöneberg",
+            link: "./.html"
         },
         {
-            imageSrc: "/Docs/Assets/Images/referenzen/img1.jpg",
-            title: "Fassadensanierung Berlin-Grunewald",
-            location: "Wallotstr. 16-22a, Berlin-Grunewald",
-            link: "#"
+            imageSrc: "/Docs/Assets/Images/referenzen/img30.jpg",
+            title: "Fassadensanierung Berlin Neukölln",
+            location: "Ossastr. 5 + 6, 12045 Berlin Neukölln",
+            link: "./.html"
         },
         {
-            imageSrc: "/Docs/Assets/Images/referenzen/img1.jpg",
-            title: "Fassadensanierung Berlin-Grunewald",
-            location: "Wallotstr. 16-22a, Berlin-Grunewald",
-            link: "#"
+            imageSrc: "/Docs/Assets/Images/referenzen/img31.jpg",
+            title: "Fassadensanierung Berlin Neukölln",
+            location: "Silbersteinstr. 47-61/Hertastr.4/5, 12051 Berlin Neukölln",
+            link: "./.html"
         },
         {
-            imageSrc: "/Docs/Assets/Images/referenzen/img1.jpg",
-            title: "Fassadensanierung Berlin-Grunewald",
-            location: "Wallotstr. 16-22a, Berlin-Grunewald",
-            link: "#"
+            imageSrc: "/Docs/Assets/Images/referenzen/img32.jpg",
+            title: "Fassadensanierung Berlin Schöneberg",
+            location: "- Fassadensanierung",
+            link: "./.html"
         },
         {
-            imageSrc: "/Docs/Assets/Images/referenzen/img1.jpg",
-            title: "Fassadensanierung Berlin-Grunewald",
-            location: "Wallotstr. 16-22a, Berlin-Grunewald",
-            link: "#"
+            imageSrc: "/Docs/Assets/Images/referenzen/img33.jpg",
+            title: "Fassadensanierung Berlin Steglitz",
+            location: "Wielandstr. 14a, Steglitz, Strassenfassade, Sanierung 2013",
+            link: "./.html"
         },
         {
-            imageSrc: "/Docs/Assets/Images/referenzen/img1.jpg",
-            title: "Fassadensanierung Berlin-Grunewald",
-            location: "Wallotstr. 16-22a, Berlin-Grunewald",
-            link: "#"
+            imageSrc: "/Docs/Assets/Images/referenzen/img34.jpg",
+            title: "Fassadensanierung Berlin Tempelhof",
+            location: "Podewilsstr. 5-11/ Gäßnerweg 27-31, 12103 Berlin Tempelhof",
+            link: "./.html"
         },
         {
-            imageSrc: "/Docs/Assets/Images/referenzen/img1.jpg",
-            title: "Fassadensanierung Berlin-Grunewald",
-            location: "Wallotstr. 16-22a, Berlin-Grunewald",
-            link: "#"
+            imageSrc: "/Docs/Assets/Images/referenzen/img35.jpg",
+            title: "Fassadensanierung Berlin Neukölln",
+            location: "Wipperstr. 21, Hof- und Strasse & Schornsteine, 2015",
+            link: "./.html"
         },
         {
-            imageSrc: "/Docs/Assets/Images/referenzen/img1.jpg",
-            title: "Fassadensanierung Berlin-Grunewald",
-            location: "Wallotstr. 16-22a, Berlin-Grunewald",
-            link: "#"
+            imageSrc: "/Docs/Assets/Images/referenzen/img36.jpg",
+            title: "Fassadensanierung Berlin Kreuzberg",
+            location: "Görlitzerstr. 34,Kreuzberg, 2015",
+            link: "./.html"
+        },
+        {
+            imageSrc: "/Docs/Assets/Images/referenzen/img37.jpg",
+            title: "Fassadensanierung Karlshorst",
+            location: "Treskowallee 62, Karlshorst, Strassenbalkone, Sanierung 2015",
+            link: "./.html"
+        },
+        {
+            imageSrc: "/Docs/Assets/Images/referenzen/img38.jpg",
+            title: "Betoninstandsetzung Berlin Zehlendorf",
+            location: "1.755,00 m² WDVS,    1.400,00 m² Betoninstandsetzung Ausführung: Herbst 2003",
+            link: "./.html"
+        },
+        {
+            imageSrc: "/Docs/Assets/Images/referenzen/img39.jpg",
+            title: "Stucksanierung Berlin Wedding",
+            location: "550,00 m² Restaurierung und Bestandssicherung der straßenseitigen Stuckfassade. Ausführung: Sommer 2003",
+            link: "./.html"
+        },
+        {
+            imageSrc: "/Docs/Assets/Images/referenzen/img40.jpg",
+            title: "Stucksanierung Berlin Charlottenburg",
+            location: "",
+            link: "./.html"
         },
     ];
 
@@ -381,7 +405,7 @@
     const endIndex = startIndex + cardsPerPage;
     const currentCards = cards.slice(startIndex, endIndex);
 
-    currentCards.forEach(card => {
+    currentCards.forEach((card,idx) => {
       const cardHTML = `
         <div class="flex items-center md:gap-5 gap-4 md:flex-row flex-col fadeIn">
           <img src="${card.imageSrc}" class="max-w-[320px] rounded-md w-full" alt="">
